--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/503054cb29.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/style.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <!--[if (lt IE 9)]><script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.helper.ie8.js"></script><![endif]-->
@@ -19,22 +19,18 @@
                 <i class="fa-solid fa-ticket"></i>
                 <h1 class="titulo-header">INGRESSOU</h1>
                 <ul class="menu-header">
-                    <a href="#">
-                        <li>Home</li>
-                    </a>
-                    <a href="#">
-                        <li>Eventos</li>
-                    </a>
+                    <a href="#"><li>Home</li></a>
+                    <a href="#"><li>Eventos</li></a>
                 </ul>
-            </div>
+            </div><!--titulo-menu-->
 
             <div class="busca-profile">
                 <input type="text" class="barra-pesquisa" placeholder="Buscar eventos">
                 <button class="pesquisar"><i class="fa-solid fa-magnifying-glass lupa"></i></button>
 
-                <a href="#" class="profile"><i class="fa-solid fa-user"></i></a>
-            </div>
-        </div>
+                <a href="perfil.html" class="profile"><i class="fa-solid fa-user"></i></a>
+            </div><!--busca-profile-->
+        </div><!--flex-header-->
     </header>
 
     <!--------------CARROSSEL------------------>
@@ -43,7 +39,7 @@
         <div class="slide s1">slide1</div>
         <div class="slide s2">slide2</div>
         <div class="slide s3">slide3</div>
-    </div>
+    </div><!--my-slider-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.js"></script>
 
@@ -71,87 +67,87 @@
                 <div class="categoria">
                     <i class="fa-solid fa-music categoria-icon musica-icon"></i>
                     <h3 class="titulo-categoria">Musica</h3>
-                </div>
+                </div><!--categoria-->
 
                 <div class="categoria">
                     <i class="fa-solid fa-basketball categoria-icon basket-icon"></i>
                     <h3 class="titulo-categoria">Esportes</h3>
-                </div>
+                </div><!--categoria-->
 
                 <div class="categoria">
                     <i class="fa-solid fa-masks-theater categoria-icon"></i>
                     <h3 class="titulo-categoria">Teatro</h3>
-                </div>
+                </div><!--categoria-->
 
                 <div class="categoria">
                     <i class="fa-solid fa-face-laugh-beam categoria-icon"></i>
                     <h3 class="titulo-categoria">Comedia</h3>
-                </div>
+                </div><!--categoria-->
 
                 <div class="categoria">
                     <i class="fa-solid fa-umbrella-beach categoria-icon"></i>
                     <h3 class="titulo-categoria">Festivais</h3>
-                </div>
-            </div>
-        </Section>
+                </div><!--categoria-->
+            </div><!--flex-categorias-->
+        </Section><!--categorias-->
 
         <!------------------EVENTOS PRINCIPAIS------------------------------>
 
         <section class="eventos-principais">
             <h2 class="titulo-seccao-2">Eventos Principais</h2>
             <div class="flex-eventos-principais">
-                <a href="#">
+                <a href="pagina-evento.html">
                     <div class="evento">
                         <div class="img-evento"></div>
                         <div class="categoria-data-flex">
                             <p class="evento-categoria evento-categoria-musica">Musica</p>
                             <p class="data">12/12/2025</p>
-                        </div>
+                        </div><!--categoria-data-flex-->
                         <h3 class="titulo-evento">Festival de Musica</h3>
                         <p class="evento-descricao">Um festival de música de 3 dias com grandes artistas do mundo todo.
                         </p>
                         <div class="preco-detalhes-flex">
                             <span class="preco">R$ 89.99</span>
                             <button class="ver-mais">Ver Mais</button>
-                        </div>
-                    </div>
+                        </div><!--preco-detalhes-flex-->
+                    </div><!--evento-->
                 </a>
 
-                <a href="#">
+                <a href="pagina-evento.html">
                     <div class="evento">
                         <div class="img-evento"></div>
                         <div class="categoria-data-flex">
                             <p class="evento-categoria evento-categoria-esporte">Esportes</p>
                             <p class="data">12/12/2025</p>
-                        </div>
-                        <h3 class="titulo-evento">Festival de Musica</h3>
-                        <p class="evento-descricao">Um festival de música de 3 dias com grandes artistas do mundo todo.
+                        </div><!--categoria-data-flex-->
+                        <h3 class="titulo-evento">Final do Brasileirão</h3>
+                        <p class="evento-descricao">Venha se emocionar nessa incrival final do campeonato nacional.
                         </p>
                         <div class="preco-detalhes-flex">
                             <span class="preco">R$ 89.99</span>
                             <button class="ver-mais">Ver Mais</button>
-                        </div>
-                    </div>
+                        </div><!--preco-detalhes-flex-->
+                    </div><!--evento-->
                 </a>
 
-                <a href="#">
+                <a href="pagina-evento.html">
                     <div class="evento">
                         <div class="img-evento"></div>
                         <div class="categoria-data-flex">
                             <p class="evento-categoria evento-categoria-teatro">Teatro</p>
                             <p class="data">12/12/2025</p>
-                        </div>
-                        <h3 class="titulo-evento">Festival de Musica</h3>
-                        <p class="evento-descricao">Um festival de música de 3 dias com grandes artistas do mundo todo.
+                        </div><!--categoria-data-flex-->
+                        <h3 class="titulo-evento">A Bela e a Fera: O Musical</h3>
+                        <p class="evento-descricao">Uma linda peça de teatro que vai te fazer chorar.
                         </p>
                         <div class="preco-detalhes-flex">
                             <span class="preco">R$ 89.99</span>
                             <button class="ver-mais">Ver Mais</button>
-                        </div>
-                    </div>
+                        </div><!--preco-detalhes-flex-->
+                    </div><!--evento-->
                 </a>
-            </div>
-        </section>
+            </div><!--flex-eventos-principais-->
+        </section><!--eventos-principais-->
 
         <!--DESTAQUES-->
 
@@ -166,7 +162,7 @@
                             <div class="categoria-data-flex">
                                 <p class="evento-categoria evento-categoria-teatro">Teatro</p>
                                 <p class="data">12/12/2025</p>
-                            </div>
+                            </div><!--categoria-data-flex-->
                             <h3 class="titulo-evento-destaque">Festival de Musica</h3>
                             <p class="evento-descricao">Um festival de música de 3 dias com grandes artistas do mundo
                                 todo.
@@ -175,10 +171,10 @@
                             <div class="preco-detalhes-flex">
                                 <span class="preco">R$ 89.99</span>
                                 <button class="ver-mais">Ver Mais</button>
-                            </div>
-                        </div>
+                            </div><!--preco-detalhes-flex-->
+                        </div><!--informacoes-destaque-->
                     </a>
-                </div>
+                </div><!--destaque-->
 
                 <div class="destaque">
                     <a href="#">
@@ -246,9 +242,8 @@
                     </a>
                 </div>
 
-
-            </div>
-        </section>
+            </div><!--flex-destaques-->
+        </section><!--destaques-->
 
         <!--EVENTOS PROXIMOS DE VOCÊ-->
 
