--- a/perfil.html
+++ b/perfil.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/503054cb29.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/styles/perfil.css">
+    <link rel="stylesheet" href="styles/perfil.css">
 </head>
 
 <body>
