--- a/reembolso.html
+++ b/reembolso.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/503054cb29.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/styles/perfil.css">
-    <link rel="stylesheet" href="/styles/reembolso.css">
+    <link rel="stylesheet" href="styles/perfil.css">
+    <link rel="stylesheet" href="styles/reembolso.css">
 </head>
 
 <body>
