--- a/reembolso.html
+++ b/reembolso.html
@@ -249,7 +249,7 @@
         </div>
     </footer>
 
-    <script src="/scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
