--- a/perfil.html
+++ b/perfil.html
@@ -68,7 +68,7 @@
 
                     <div class="eventos-vindo-evento">
                         <div class="evento-vindo-header">
-                            <h3 class="evento-vindo-titulo"></h3>
+                            <h3 class="evento-vindo-titulo">Festival da Musica</h3>
                             <p class="evento-categoria-musica evento-categoria">Musica</p>
                         </div>
 
